2010-01-18 Andrew John Hughes  <ahughes@redhat.com>

	* configure.ac:
	Use AC_LANG_PUSH and AC_LANG_POP instead
	of deprecated SAVE and RESTORE macros.
	
2010-01-17  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-sparc-trapsfix.patch: Merged sparc headers
	are located in asm/.

2010-01-16 Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_CHECK_NUMBER_OF_PARALLEL_JOBS):
	Handle --with-parallel-jobs and
	--without-parallel-jobs correctly.
	--with-parallel-jobs (no arguments) uses
	available processors + 1, while
	--without-parallel-jobs (the default) uses 2.
	(IT_FIND_NUMBER_OF_PROCESSORS):
	Dependency of above.  Uses getconf to
	obtain the number of available processors.
	
2010-01-16 Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	Send output to AS_MESSAGE_LOG_FD rather
	than /dev/null so we have a record of errors.
	
2010-01-16 Andrew John Hughes  <ahughes@redhat.com>

	configure output and option cleanup
	* Makefile.am:
	Change !ENABLE_OPTIMIZATIONS to
	DISABLE_OPTIMIZATIONS.
	* acinclude.m4:
	(FIND_ECJ_JAR): Always produce output,
	not just when explicitly specified.
	(FIND_JAVAH): Handle the yes and no
	possibilities better.
	(FIND_JAR): Likewise.
	(FIND_RMIC): Likewise.
	(WITH_OPENJDK_SRC_ZIP): Quote checking output.
	(WITH_ALT_JAR_BINARY): Likewise.
	(FIND_XALAN2_JAR): Improve wording.
	(FIND_XALAN2_SERIALIZER_JAR): Likewise.
	(FIND_XERCES_JAR): Likewise.
	(FIND_NETBEANS): Handle yes and no
	possibilities better.
	(FIND_RHINO_JAR): Quote checking output.
	(ENABLE_OPTIMIZATIONS): Rename to
	DISABLE_OPTIMIZATIONS for clarity.
	(ENABLE_ZERO_BUILD): Quote checking output.
	(AC_CHECK_WITH_CACAO_SRC_ZIP): Likewise.
	(AC_CHECK_WITH_CACAO_SRC_DIR): Likewise.
	(WITH_OPENJDK): Complete output
	with no when not specified.
	(IT_CHECK_ADDITIONAL_VMS): Moved to a macro
	from configure.ac
	(IT_CHECK_NUMBER_OF_PARALLEL_JOBS): Likewise.
	* configure.ac:
	Invoke new macros.  Quote output and correct