@@ -4,6 +4,14 @@
 	Use AC_LANG_PUSH and AC_LANG_POP instead
 	of deprecated SAVE and RESTORE macros.
 	
+2010-01-18 Andrew John Hughes  <ahughes@redhat.com>
+
+	PR icedtea/416:
+	* Makefile.am:
+	Use $(OPENJDK_SRC_ZIP) and $(HOTSPOT_SRC_ZIP)
+	to determine names of tarballs rather than
+	hardcoding openjdk.tar.gz and hotspot.tar.gz
+	
 2010-01-17  Matthias Klose  <doko@ubuntu.com>
 
 	* patches/icedtea-sparc-trapsfix.patch: Merged sparc headers
